--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,11 @@
       src="https://kit.fontawesome.com/c40cfcc8ac.js"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
     <app-root></app-root>
   </body>
 </html>
